force-app/main/default/objects/InvestedFund__c/InvestedFund__c.object-meta.xml
<CustomObject>
    <label>Invested Fund</label>
    <nameField>
        <displayFormat>IF-{00}</displayFormat>
        <label>Invested Fund Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invested Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>