force-app/main/default/objects/InvestedFund__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <inlineHelpText>Name of the Fund. Will be populated via Master detail relationship</inlineHelpText>
    <label>Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Invested Funds</relationshipLabel>
    <relationshipName>InvestedFunds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>