force-app/main/default/objects/InvestedFund__c/fields/Invested_Fund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invested_Fund_Amount__c</fullName>
    <formula>Fund__r.STI__c  *  Invested_Fund_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How much amount of the total investment has been invested into this Fund.</inlineHelpText>
    <label>Invested Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>