force-app/main/default/objects/InvestedFund__c/fields/Invested_Fund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Invested_Fund_Percentage__c</fullName>
    <inlineHelpText>How much %age of the total investment has been invested into this Fund.</inlineHelpText>
    <label>Invested Fund %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>