force-app/main/default/objects/InvestedFund__c/fields/InvestmentName__c.field-meta.xml
<CustomField>
    <fullName>InvestmentName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Record</label>
    <referenceTo>InvestmentRecord__c</referenceTo>
    <relationshipLabel>Invested Funds</relationshipLabel>
    <relationshipName>Invested_Funds1</relationshipName>
    <type>Lookup</type>
</CustomField>