force-app/main/default/objects/InvestedFund__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <formula>Fund__r.ROI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>