force-app/main/default/objects/InvestedFund__c/fields/ROI_Profit_Amount__c.field-meta.xml
<CustomField>
    <fullName>ROI_Profit_Amount__c</fullName>
    <formula>Fund__r.ROI_Profit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>